--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "code-mirror-themes": "^1.0.0",
-    "idb": "^6.1.2"
+    "idb": "^6.1.2",
+    "run": "^1.4.0",
+    "test": "^0.6.0"
   }
 }
